--- a/ScriptGenerateNetCore/ScriptGenerateNetCore.csproj
+++ b/ScriptGenerateNetCore/ScriptGenerateNetCore.csproj
@@ -1,7 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <RepositoryUrl>https://github.com/Difficulty-in-naming/ScriptGenerate</RepositoryUrl>
+        <RepositoryType>github</RepositoryType>
+        <TargetFrameworks>net5.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.1;netstandard1.6;netstandard1.7;netstandard2.0;netstandard2.1</TargetFrameworks>
+        <PackageVersion>1.0.1</PackageVersion>
+        <Authors>Panthea</Authors>
+        <PackageLicenseFile>License.txt</PackageLicenseFile>
     </PropertyGroup>
-
+    <ItemGroup>
+        <None Include="License.txt">
+          <Pack>true</Pack>
+          <PackagePath>License.txt</PackagePath>
+        </None>
+    </ItemGroup>
 </Project>
